nginx-pod/nginx-service-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
  labels:
    name: nginx-service-clusterip
spec:
  type: NodePort
  selector:
    app: nginx-pod  
  ports:
    - name: "http-server-clusterip"
      port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  labels:
    name: nginx-service-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-pod  
  ports:
    - name: "http-server-nodeport"
      port: 80
      protocol: TCP
      nodePort: 30080
