nginx-pod/nginx-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  backend:
    serviceName: nginx-service-clusterip
    servicePort: 80
